Closed Bug 1676632 Opened 4 years ago Closed 4 years ago

Throw more descriptive actor error messages.

Categories

(Core :: DOM: Content Processes, defect)

defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox85 --- fixed

People

(Reporter: emilio, Assigned: emilio)

Details

Attachments

(1 file)

No description provided.
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c8c3b7df2f30
Throw more descriptive actor errors. r=smaug,nika
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: