Bug 1676632 - Throw more descriptive actor errors. r=smaug,nika

Differential Revision: https://phabricator.services.mozilla.com/D96704